--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
     color: rgb(255, 255, 255);
 }
 
-.data1, .data2, .data3{
+.data1, .data2, .data3, .data4{
     float: left;
     text-align: center;
     display: block;
     padding: 20px;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 
